tests/snapshots/conformance__n_string_incomplete_escaped_character.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\u00A"]
stdout --- 
<empty>
stderr --- 
error: expected hex digit 4 of 4 in escape, found `"`
 --> stdin:1:8
  |
1 | ["\u00A"]
  |  ---   ^
  |  ||
  |  |\u escape started here
  |  opening quote found here
