tests/snapshots/conformance__n_string_incomplete_surrogate.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\uD834\uDd"]
stdout --- 
<empty>
stderr --- 
error: expected hex digit 3 of 4 in escape, found `"`
 --> stdin:1:13
  |
1 | ["\uD834\uDd"]
  |  -      --  ^
  |  |      |
  |  |      \u escape started here
  |  opening quote found here
