tests/snapshots/conformance__n_string_leading_uescaped_thinspace.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
[\u0020"asd"]
stdout --- 
<empty>
stderr --- 
error: unexpected character `\`. expected start of a json value
 --> stdin:1:2
  |
1 | [\u0020"asd"]
  |  ^
