tests/snapshots/conformance__n_string_no_quotes_with_bad_escape.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
[\n]
stdout --- 
<empty>
stderr --- 
error: unexpected character `\`. expected start of a json value
 --> stdin:1:2
  |
1 | [\n]
  |  ^
