tests/snapshots/conformance__n_string_single_quote.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
['single quote']
stdout --- 
<empty>
stderr --- 
error: unexpected character `'`. expected start of a json value
 --> stdin:1:2
  |
1 | ['single quote']
  |  ^
