tests/snapshots/conformance__n_string_single_string_no_double_quotes.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
abc
stdout --- 
<empty>
stderr --- 
error: unexpected character `a`. expected start of a json value
 --> stdin:1:1
  |
1 | abc
  | ^
