tests/snapshots/conformance__n_string_unicode_capitalu.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
"\UA66D"
stdout --- 
<empty>
stderr --- 
error: expected escapable sequence, found `U`.
       valid escapes are `\"`, `\\`, `\/`, `\b`, `\f`, `\n`, `\r`, `\t` or `\uXXXX` (4 hex digits)
 --> stdin:1:3
  |
1 | "\UA66D"
  | --^
  | ||
  | |escape slash found here
  | opening quote found here
  |
help: remove unnecessary escape slash
  |
1 - "\UA66D"
1 + "UA66D"
  |
